--- a/软考备赛/10.设计模式.md
+++ b/软考备赛/10.设计模式.md
@@ -21,7 +21,7 @@
 - 定义：定义一个工厂类，他可以根据参数的不同返回不同类的实例，被创建的实例通常都具有共同的父类。在简单工厂模式中用于被创建实例的方法通常为静态(static)方法，因此简单工厂模式又被成为静态工厂方法
 - 简单工厂模式违反了开放封闭原则，即对扩展开放对修改也开放。
 
-![image-20230414101050042](../../../../../Blog2/public/images/photo/image-20230414101050042.png)
+![image-20230414101050042](../00box/photo/image-20230414101050042.png)
 
 ```java
 /**
@@ -94,7 +94,7 @@ class ProductB extends Product{
 
 - 当类将创建对象的职责委托给多个帮助子类中的某一个，并且你希望将哪一个帮助子类是代理者这一信息局部化的时候。
 
-![image-20230414103527217](../../../../../Blog2/public/images/photo/image-20230414103527217.png)
+![image-20230414103527217](../00box/photo/image-20230414103527217.png)
 
 ```java
 /**
@@ -173,7 +173,7 @@ class ProductB implements Product{
 - 当要强调一系列相关的产品对象的设计以便进行联合使用时。
 - 当提供一个产品类库，只想显示它们的接口而不是实现时。
 
-![image-20230414113152451](../../../../../Blog2/public/images/photo/image-20230414113152451.png)
+![image-20230414113152451](../00box/photo/image-20230414113152451.png)
 
 ```java
 /**
@@ -288,7 +288,7 @@ class ProductB2 implements ProductB{
 - 当创建复杂对象的算法应该独立于该对象的组成部分以及它们的装配方式时。
 - 当构造过程必须允许被构造的对象有不同的表示时。
 
-![image-20230414134325945](../../../../../Blog2/public/images/photo/image-20230414134325945.png)
+![image-20230414134325945](../00box/photo/image-20230414134325945.png)
 
 ```java
 /**
@@ -398,7 +398,7 @@ class Product{
 - 为了避免创建一个与产品类层次平行的工厂类层次时。
 - 当一个类的实例只能有几个不同状态组合中的一种时。建立相应数目的原型并克隆它们，可能比每次用合适的状态手工实例化该类更方便一些。
 
-![image-20230414145403104](../../../../../Blog2/public/images/photo/image-20230414145403104.png)
+![image-20230414145403104](../00box/photo/image-20230414145403104.png)
 
 ```java
 /**
