--- a/软考备赛/10.设计模式.md
+++ b/软考备赛/10.设计模式.md
@@ -9,7 +9,7 @@
 - 解决方案（Solution）
 - 效果（Consequences）
 
-![image-20230417151608470](../../../../../Blog2/public/images/photo/image-20230417151608470.png)
+![image-20230417151608470](../00box/photo/image-20230417151608470.png)
 
 
 
@@ -451,3 +451,1419 @@ class Product implements Prototype{
 }
 ```
 
+
+
+###  Singleton（单例）
+
+1）意图
+
+保证一个类仅有一个实例，并提供一个访问它的全局访问点。
+
+2）结构：**创建型对象模式**
+
+3）适用性
+Singleton 模式适用于：
+
+- 当类只能有一个实例而且客户可以从一个众所周知的访问点访问它时。
+- 当这个唯一实例应该是通过子类化可扩展的，并且客户无须更改代码就能使用一个扩展的实例时。
+
+![image-20230414153516687](../00box/photo/image-20230414153516687.png)
+
+> 其中：Singleton指定一个Instance操作，允许客户访问它的唯一实例，Instance是一个类
+>
+> 操作：可能负责创建它自己的唯一实例。
+
+
+
+```java
+/**
+ * 单例模式
+ */
+public class SingletonPattern {
+    public static void main(String[] args) {
+        Singleton instance1 = Singleton.getInstance();
+        Singleton instance2 = Singleton.getInstance();
+        Singleton instance3 = Singleton.getInstance();
+
+        System.out.println("instance1: " + instance1);
+        System.out.println("instance2: " + instance2);
+        System.out.println("instance3: "+ instance3);
+    }
+}
+
+class Singleton{
+     private static Singleton instance = new Singleton();
+
+    private Singleton(){};
+
+    public static Singleton getInstance(){
+        return instance;
+    }
+}
+```
+
+![image-20230414154430890](../00box/photo/image-20230414154430890.png)
+
+
+
+##  结构型设计模式（7种）
+
+###  1. Adapter（适配器）
+
+1）意图
+
+将一个类的接口转换成客户希望的另外一个接口。Adapter模式使得原本由于接口不兼容而不能一起工作的那些类可以一起工作。
+
+2）结构
+
+![image-20230414161840751](../00box/photo/image-20230414161840751.png)
+
+其中：
+
+- Target定义Client使用的与特定领域相关的接口。
+- Client与符合Target接口的对象协同。
+- Adaptee定义一个已经存在的接口，这个接口需要适配。
+- Adapter对Adaptee的接口与Target接口进行适配。
+
+```java
+/**
+ * 适配器模式
+ */
+public class AdapterPattern {
+    public static void main(String[] args) {
+        Target target = new Adapter();
+        target.Request();
+    }
+}
+
+class Target{
+    public void Request(){
+        System.out.println("普通请求~");
+    }
+}
+
+/**
+ * 适配器
+ */
+class Adapter extends Target {
+    private Adaptee adaptee = new Adaptee();
+    @Override
+    public void Request() {
+        adaptee.SpecificRequest();
+    }
+}
+
+class Adaptee{
+    public void SpecificRequest(){
+        System.out.println("特殊请求~");
+    }
+}
+```
+
+
+
+3）适用性
+
+Adapter 模式适用于：
+
+- **想使用一个已经存在的类，而它的接口不符合要求。**
+- 想创建一个可以服用的类，该类可以与其他不相关的类或不可预见的类（即那些接口可能不一定兼容的类)协同工作。（了解）
+- (仅适用于对象Adapter)想使用一个已经存在的子类，但是不可能对每一个都进行子
+  类化以匹配它们的接口。对象适配器可以适配它的父类接口。（了解）
+
+
+
+
+
+### 2. *Bridge（桥接）
+
+1）意图
+
+将抽象部分与其实现部分分离，使它们都可以独立地变化。
+
+2）结构
+
+![image-20230414163901596](../00box/photo/image-20230414163901596.png)
+
+```java
+/**
+ * 桥接模式
+ */
+public class BridgePattern {
+    public static void main(String[] args) {
+        Product productA = new ProductA();
+        Product productB = new ProductA();
+
+        Color red = new Red();
+        productA.setName("产品A");
+        productA.setColor(red);
+        productA.Operation();
+
+        Blue blue = new Blue();
+        productB.setName("产品B");
+        productB.setColor(blue);
+        productB.Operation();
+    }
+}
+
+abstract class Product{
+    private String name;
+    protected Color color;
+
+    public void setName(String name){
+        this.name = name;
+    }
+
+    public String getName(){
+        return name;
+    }
+
+    public void setColor(Color color){
+        this.color = color;
+    }
+
+    public abstract void Operation();
+}
+
+interface Color{
+    void OperationImpl(String name);
+}
+
+class ProductA extends Product{
+
+    @Override
+    public void Operation() {
+        color.OperationImpl(this.getName());
+    }
+}
+
+class Red implements Color{
+
+    @Override
+    public void OperationImpl(String name) {
+        System.out.println(name + ": 红色" );
+    }
+}
+
+class Blue implements Color{
+
+    @Override
+    public void OperationImpl(String name) {
+        System.out.println(name + ": 蓝色" );
+    }
+}
+```
+
+
+
+3）适用性（了解）
+
+- 不希望在抽象和它的实现部分之间有一个固定的绑定关系。
+- 类的抽象以及它的实现都应该可以通过生成子类的方法加以扩充。
+- 对一个抽象的实现部分的修改应对客户不产生影响，即客户代码不必重新编译。(C++)想对客户完全隐藏抽象的实现部分。
+- 有许多类要生成的类层次结构。
+- 想在多个对象间共享实现（可能使用引用计数），但同时要求客户并不知道这一点。
+
+
+
+### 3. *Composite（组合
+
+1）意图
+
+将对象组合成树型结构以表示“部分-整体”的层次结构。Composite 使得用户对单个对象
+和组合对象的使用具有一致性。
+
+2）结构
+
+![image-20230415091034585](../00box/photo/image-20230415091034585.png)
+
+其中：
+
+-  Component 为组合中的对像声明接口：在适当情况下实现所有类共有接口的默认行为：声明一个接口用于访问和管理 Component 的子组件；（可选）在递归结构中定义一个接口，用于访问一个父组件，并在合适的情况下实现它。 
+-  Leaf 在组合中表示叶结点对象，叶结点没有子结点；在组合中定义图元对象的行为。 
+-  Composite定义有子组件的那些组件的行为；存储子组件；在Component接口中实现与子组件有关的操作。 
+-  Client 通过 Component 接口操纵组合组件的对象。 
+
+
+
+```java
+import java.util.*;
+
+/**
+ * 组合模式
+ */
+public class CompositePattern {
+    public static void main(String[] args) {
+        // 父类名 对象名 = new 子类名();
+        AbstractFile root = new Folder("root");
+
+        AbstractFile folderA = new Folder("folderA");
+        AbstractFile folderB = new Folder("folderB");
+
+        AbstractFile fileC = new File("fileC");
+        AbstractFile fileD = new File("fileD");
+        AbstractFile fileE = new File("fileE");
+
+        root.Add(folderA);
+        root.Add(folderB);
+        root.Add(fileC);
+
+        folderA.Add(fileD);
+        folderA.Add(fileE);
+
+        print(root);
+    }
+
+    static void print(AbstractFile file){
+        file.printName();
+
+        List<AbstractFile> childrenList = file.getChildren();
+        if (childrenList == null){
+            return;
+        }
+
+        for (AbstractFile children : childrenList) {
+            print(children);
+        }
+    }
+}
+
+abstract class AbstractFile{
+    protected String name;
+
+    public void printName(){
+        System.out.println(name);
+    }
+
+    public abstract boolean Add(AbstractFile file);
+    public abstract boolean Remove(AbstractFile file);
+    public abstract List<AbstractFile> getChildren();
+
+}
+
+class Folder extends AbstractFile {
+
+    private List<AbstractFile> childrenList = new ArrayList<>();
+
+    public Folder(String name) {
+        this.name = name;
+    }
+
+    @Override
+    public boolean Add(AbstractFile file) {
+        return childrenList.add(file);
+    }
+
+    @Override
+    public boolean Remove(AbstractFile file) {
+        return childrenList.remove(file);
+    }
+
+    @Override
+    public List<AbstractFile> getChildren() {
+        return childrenList;
+    }
+}
+
+class File extends AbstractFile{
+    public File(String name) {
+        this.name = name;
+    }
+
+    @Override
+    public boolean Add(AbstractFile filei) {
+        return false;
+    }
+
+    @Override
+    public boolean Remove(AbstractFile file) {
+        return false;
+    }
+
+    @Override
+    public List<AbstractFile> getChildren() {
+        return null;
+    }
+}
+```
+
+
+
+3）适用性
+
+Composite 模式下适用于：
+
+- 想表示对象的部分-整体层次结构。
+- 希望用户忽略组合对象与单个对象的不同，用户将统一地使用组合结构中的所有对象。
+
+
+
+### 4. *Decorator（装饰器）
+
+1）意图
+
+动态地给一个对象添加一些额外的职责。就增加功能而言，Decorator模式比生成子类更加灵活。
+
+2）结构
+
+![image-20230415103943593](../00box/photo/image-20230415103943593.png)
+
+其中：
+
+- Component定义一个对象接口，可以给这些对象动态地添加职责。
+- ConcreteComponent定义一个对象，可以给这个对象添加一些职责。
+- Decorator 维持一个指向 Component 对象的指针，并定义一个与Component 接口一致的接口。
+- ConcreteDecorator 向组件添加职责。
+
+```java
+/**
+ * 装饰器模式
+ */
+public class DecoratorPattern {
+    public static void main(String[] args) {
+        Person zhangsan = new Student("张三");
+        zhangsan = new DecoratorA(zhangsan);
+        zhangsan = new DecoratorB(zhangsan);
+        zhangsan.Operation();
+
+        System.out.println("==========分割线==============");
+
+        // 对像链
+        Person lisi = new DecoratorB(new DecoratorA(new Student("李四")));
+        lisi.Operation();
+
+    }
+}
+
+abstract class Decorator extends Person{
+    protected Person person;
+}
+
+class DecoratorA extends Decorator{
+    public DecoratorA(Person person){
+        this.person = person;
+    }
+
+    @Override
+    public void Operation() { // 职责
+        person.Operation(); // 原本的职责
+        System.out.println("写作业~");
+    }
+}
+
+class DecoratorB extends Decorator{
+    public DecoratorB(Person person){
+        this.person = person;
+    }
+
+    @Override
+    public void Operation() { // 职责
+        person.Operation(); // 原本的职责
+        System.out.println("考试~");
+    }
+}
+
+abstract class Person{
+    protected String name;
+
+    public abstract void Operation(); // 职责
+
+}
+
+class Student extends Person{
+    public Student(String name){
+        this.name = name;
+    }
+
+    @Override
+    public void Operation() {
+        System.out.println(name + "的职责：学习~");
+    }
+}
+```
+
+3）适用性
+
+Decorator 模式适用于：
+
+- 在不影响其他对象的情况下，以动态、透明的方式给单个对象添加职责。
+- 处理那些可以撤销的职责。
+- 当不能采用生成子类的方式进行扩充时。一种情况是，可能有大量独立的扩展，为支持每一种组合将产生大量的子类，使得子类数目呈爆炸性增长。另一种情况可能是，由于类定义被隐藏，或类定义不能用于生成子类。（了解）
+
+
+
+### 5. Facade（外观）少
+
+1）意图
+
+为子系统中的一组接口提供一个一致的界面，Facade 模式定义了一个高层接口，这个接口使得这一子系统更加容易使用。
+
+2）结构
+
+![image-20230415135923577](../00box/photo/image-20230415135923577.png)
+
+其中：
+
+- Facade知道哪些子系统类负责处理请求；将客户的请求代理给适当的子系统对象。
+- Subsystem classes实现子系统的功能；处理有Facade对象指派的任务；没有Facade的任何相关信息，即没有指向Facade的指针。
+
+
+
+```java
+import java.util.Scanner;
+
+/**
+ */
+public class FacadePattern {
+    public static void main(String[] args) {
+        Facade facade = new Facade();
+
+        facade.methodA();
+        facade.methodB();
+        facade.methodC();
+    }
+}
+
+class Facade{
+    SubSystemOne subSystemOne;
+    SubSystemTwo subSystemTwo;
+    SubSystemThree subSystemThree;
+
+    public Facade(){
+        subSystemOne = new SubSystemOne();
+        subSystemTwo = new SubSystemTwo();
+        subSystemThree = new SubSystemThree();
+    }
+
+    public void methodA(){
+        subSystemOne.methodOne();
+    }
+
+    public void methodB(){
+        subSystemTwo.methodTwo();
+    }
+
+    public void methodC(){
+        subSystemThree.methodThree();
+    }
+}
+
+class SubSystemOne{
+    public void methodOne(){
+        System.out.println("执行子系统一的功能~");
+    }
+}
+
+class SubSystemTwo{
+    public void methodTwo(){
+        System.out.println("执行子系统二的功能~");
+    }
+}
+
+class SubSystemThree{
+    public void methodThree(){
+        System.out.println("执行子系统三的功能~");
+    }
+}
+```
+
+3）适用性
+
+Facade 模式适用于：
+
+- 要为一个复杂子系统提供一个简单接口时。
+- 客户程序与抽象类的实现部分之间存在着很大的依赖性。
+- 当需要构建一个层次结构的子系统时，使用 Facade 模式定义子系统中每层的入口点。
+
+
+
+### 6. Flyweight（享元）
+
+1）意图
+
+运用共享技术有效地支持大量细粒度的对象。
+
+2）结构
+
+![image-20230415145022868](../00box/photo/image-20230415145022868.png)
+
+其中：
+
+- Flyweight 描述一个接口，通过这个接口 Flyweight 可以接受并作用于外部状态。
+- ConcreteFlyweight 实现Flyweight接口，并为内部状态（如果有）增加存储空间。
+- ConcreteFlyweight 对象必须是可共享的。它所存储的状态必须是内部的，即它必须独立于 ConcreteFlyweight 对象的场景。
+- 并非所有的 Flyweight 子类都需要被共享。Flyweight 接口使共享成为可能，但它并不强制共享。在 Flyweight 对象结构的某些层次，UnsharedConcreteFlyweight 对象通常将ConcreteFlyweight 对象作为子结点。
+- FlyweightFactory 创建并管理Flyweight对象；确保合理地共享Flyweight,当用户请求一个Flyweight时，FlyweightFactory 对象提供一个已创建的实例或者在不存在时创建个实例。
+- Client 维持一个对 Flyweight 的引用；计算或存储一个或多个 Flyweight 的外部状态。
+
+
+
+```java
+/**
+ * 享元模式 案例1
+ */
+
+public class FlyweightPattern {
+    public static void main(String[] args) {
+        PieceFactory factory = new PieceFactory();
+
+        Piece whitePiece1 = factory.getPiece(0);
+        whitePiece1.draw(66,87);
+        System.out.println(whitePiece1);
+
+        Piece blackPiece1 = factory.getPiece(1);
+        blackPiece1.draw(20,11);
+        System.out.println(blackPiece1);
+
+        Piece whitePiece2 = factory.getPiece(0);
+        whitePiece1.draw(26, 54);
+        System.out.println(whitePiece2);
+
+        Piece blackPiece2 = factory.getPiece(1);
+        blackPiece2.draw(12, 34);
+        System.out.println(blackPiece2);
+    }
+}
+
+class PieceFactory{
+    private Piece[] pieces = {new WhitePiece(),new BlackPiece()};
+
+    public Piece getPiece(int key){
+        if (key == 0) return pieces[0];
+        else return pieces[1];
+    }
+}
+
+abstract class Piece{
+    protected String color;
+
+    public abstract void draw(int x,int y);
+}
+
+class WhitePiece extends Piece{
+    public WhitePiece(){
+        this.color = "white";
+    }
+
+    @Override
+    public void draw(int x, int y) {
+        System.out.println("draw a color: "+color + " piece x: " + x + " y:　" + y);
+    }
+}
+
+class BlackPiece extends Piece{
+    public BlackPiece(){
+        this.color = "black";
+    }
+
+    @Override
+    public void draw(int x, int y) {
+        System.out.println("draw a color: " + color + " piece x: " + x + " y:　" + y);
+    }
+}
+```
+
+
+
+```java
+/**
+ * 享元模式 案例2
+ */
+
+public class FlyweightPattern {
+    public static void main(String[] args) {
+        ShapeFactory factory = new ShapeFactory();
+
+        Random random = new Random();
+        String[] colors = {"red","blue","green","whilte","black"};
+
+        for (int i = 1; i <= 10; i++) {
+            int x = random.nextInt(colors.length);
+            Shape shape = factory.getShape(colors[x]);
+            System.out.print("第" + i + "个圆：");
+            shape.draw(random.nextInt(2022),random.nextInt(528));
+        }
+    }
+
+}
+
+class ShapeFactory{
+    private Map<String,Shape> map = new HashMap<>();
+
+    public Shape getShape(String key){
+        if (!map.containsKey(key)) {
+            map.put(key, new Circle(key));
+            System.out.println("create color: " + key + " circle");
+        }
+        return map.get(key);
+    }
+}
+
+abstract class Shape {
+    protected String color;
+
+    public abstract void draw(int x, int y);
+}
+
+class Circle extends Shape {
+
+    public Circle(String color){
+        this.color = color;
+    }
+
+    @Override
+    public void draw(int x, int y) {
+        System.out.println("draw a color: " + color + " circle x："+ x + " y：" + y);
+    }
+}
+```
+
+
+
+3）适用性
+
+Flyweight模式适用于：
+
+- 一个应用程序使用了大量的对象。
+- 完全由于使用大量的对象，造成很大的存储开销。
+- 对象的大多数状态都可变为外部状态。
+- 如果删除对象的外部状态，那么可以用相对较少的共享对象取代很多组对象。
+- 应用程序不依赖于对象标识。由于Flyweight对象可以被共享，所以对于概念上明显有别的对象，标识测试将返回真值。
+
+
+
+### 7. Proxy(代理)少
+
+1）意图
+
+为其他对象提供一种代理以控制对这个对象的访问。
+
+2）结构
+
+![image-20230415154708049](../00box/photo/image-20230415154708049.png)
+
+```java
+/**
+ * 代理模式
+ */
+public class ProxyPattern {
+    public static void main(String[] args) {
+        RealSubject realSubject = new RealSubject();
+        Proxy proxy = new Proxy(realSubject);
+
+        proxy.buy();
+    }
+}
+
+interface Subject{
+    void buy();
+}
+
+class Proxy implements Subject{
+
+    protected RealSubject realSubject;
+
+    public Proxy(RealSubject realSubject){
+        this.realSubject = realSubject;
+    }
+
+    @Override
+    public void buy() {
+        System.out.println("办理购买前的手续~");
+        realSubject.buy(); // 付钱
+        System.out.println("办理购买后的手续~");
+    }
+}
+
+class RealSubject implements Subject{
+
+    @Override
+    public void buy() {
+        System.out.println("付钱~");
+    }
+}
+```
+
+
+
+3）适用性 (了解)
+Poxy模式适用于在需要比较通用和复杂的对象指针代替简单的指针的时候，常见情况有：
+
+- 远程代理(Remote Proxy)为一个对象在不同地址空间提供局部代表。
+- 虚代理(Virtual Proxy)根据需要创建开销很大的对象。
+- 保护代理(Protection Proxy)控制对原始对象的访问，用于对象应该有不同的访问权限的时候。
+- 智能引用(Smart Reference)取代了简单的指针，它在访问对象时执行一些附加操作。
+
+
+
+
+
+## 行为设计模式（11种）
+
+### 1. Chain of Responsibility（责任链）
+
+1）意图
+
+**使多个对象都有机会处理请求**，从而避免请求的发送者和接收者之间的耦合关系。**将这些对象连成一条链**，并沿着这条链传递该请求，直到有一个对象处理它为止。
+
+2）结构
+
+![image-20230415171040969](../00box/photo/image-20230415171040969.png)
+
+其中：
+
+- Handler定义一个处理请求的接口；（可选）实现后继链。
+- ConcreteHandler处理它所负责的请求；可访问它的后继者；如果可处理该请求，就处理它，否则将该请求转发给后继者。
+- Client向链上的具体处理者(ConcreteHandler)对象提交请求。
+
+```java
+/**
+ * 责任链模式
+ */
+public class ChainOfResponsibilityPattern {
+    public static void main(String[] args) {
+        Handler counsellor = new Counsellor();
+        Handler dean = new Dean();
+        Handler headmaster= new Headmaster();
+
+        counsellor.setNext(dean);
+        dean.setNext(headmaster);
+
+        counsellor.HandRequest(25);
+    }
+
+}
+
+abstract class Handler{
+    protected Handler next;
+
+    public void setNext(Handler next){
+        this.next =next;
+    }
+
+    public abstract void HandRequest(int request);
+}
+
+class Counsellor extends Handler{
+
+    @Override
+    public void HandRequest(int request) {
+        if (request <= 7){
+            System.out.println("辅导员审批通过~");
+        }else {
+            if (next != null){
+                next.HandRequest(request);
+            }else {
+                System.out.println("无法审批");
+            }
+        }
+    }
+}
+
+class Dean extends Handler{
+
+    @Override
+    public void HandRequest(int request) {
+        if (request <= 15){
+            System.out.println("院长审批通过~");
+        }else {
+            if (next != null){
+                next.HandRequest(request);
+            }else {
+                System.out.println("无法审批");
+            }
+        }
+    }
+}
+
+class Headmaster extends Handler{
+
+    @Override
+    public void HandRequest(int request) {
+        if (request <= 30){
+            System.out.println("校长审批通过~");
+        }else {
+            if (next != null){
+                next.HandRequest(request);
+            }else {
+                System.out.println("无法审批");
+            }
+        }
+    }
+}
+```
+
+3）适用性
+
+Chain of Responsibility 模式适用于以下条件：
+
+- 有多个的对象可以处理一个请求，哪个对象处理该请求运行时刻自动确定。
+- 想在不明确指定接收者的情况下向多个对象中的一个提交一个请求。
+- 可处理一个请求的对象集合应被动态指定。
+
+
+
+### 2.  Command（命令）
+
+1）意图
+
+将一个请求封装为一个对象，从而使得可以用不同的请求对客户进行参数化；对**请求排队**或记录**请求日志**，以及支持可**撤销**的操作。
+
+2）结构
+
+![image-20230415173855870](../00box/photo/image-20230415173855870.png)
+
+其中：
+
+- Command声明执行操作的接口。
+- ConcreteCommand 将一个接收者对象绑定于一个动作：调用接收者相应的操作，以实现Execute。
+- Client 创建一个具体命令对象并设定它的接收者。
+- Invoker 要求该命令执行这个请求。
+- Receiver 知道如何实施与执行一个请求相关的操作。任何类都可能作为一个接收者
+
+
+
+```java
+/**
+ * 命令模式
+ */
+public class CommandPattern {
+    public static void main(String[] args) {
+        Tv tv = new Tv(); // 接收者 对象 电视机
+
+        Command onCommand = new OnCommand(tv); // 命令对象 开机命令
+        Command offCommand = new OnCommand(tv); // 命令对象 关机命令
+
+        Invoker invoker = new Invoker(); //请求者
+        invoker.setCommand(onCommand); // 给请求者设置 开机 命令
+        invoker.call(); // 请求者去请求命令
+
+        System.out.println("==============分割线===============");
+
+        invoker.setCommand(offCommand); // 给请求者设置 关机命令
+        invoker.call(); // 请求者去请求命令
+
+    }
+}
+
+class Invoker{ // 请求者
+    private Command command; // 命令
+
+    public void setCommand(Command command){ // 设置请求者的命令
+        this.command = command;
+    }
+
+    public void call(){ // 调用
+        command.Execute();
+    }
+}
+
+interface Command{ // 命令接口
+    void Execute(); // 执行命令
+
+}
+
+class OnCommand implements Command{// 开机命令
+    private Tv tv;
+
+    public OnCommand(Tv tv){
+        this.tv = tv;
+    }
+
+    @Override
+    public void Execute() {
+        tv.OnAction();
+    }
+}
+
+class OffCommand implements Command{ // 关机命令
+    private Tv tv;
+
+    public OffCommand(Tv tv){
+        this.tv = tv;
+    }
+
+    @Override
+    public void Execute() {
+        tv.OffAction();
+    }
+}
+
+class Tv{
+    public void OnAction(){ // 开机行为
+        System.out.println("电视机开机了...");
+    }
+
+    public void OffAction(){ // 关机行为
+        System.out.println("电视机关机了...");
+    }
+}
+```
+
+
+
+3）适用性
+
+Command 模式适用于：
+
+- 抽象出待执行的动作以参数化某对象。
+- 在不同的时刻指定、排列和执行请求。
+- 支持取消操作。
+- 支持修改日志。
+- 用构建在原语操作上的高层操作构造一个系统。
+
+
+
+
+
+### 3. Interpreter（解释器）
+
+1）意图
+
+给定一个语言，定义它的文法的一种表示，并定义一个解释器，这个解释器使用该表示来
+解释语言中的句子。
+
+2）结构
+
+![image-20230416093633395](../00box/photo/image-20230416093633395.png)
+
+```java
+/**
+ * 解释器模式
+ */
+public class InterpreterPattern {
+
+    public static void main(String[] args) {
+
+        Context context = new Context();
+
+        context.check("A区的开发人员");
+        context.check("B区的调试人员");
+        context.check("C区的测试人员");
+
+        System.out.println("========分割线=============");
+
+        context.check("D区的程序员");
+        context.check("D区的测试员");
+        context.check("C区的程序员");
+
+    }
+}
+
+class Context{
+    private String[] regions = {"A区","B区","C区"};
+    private String[] persions = {"开发人员","测试人员","调试人员"};
+    private NonterminalExpression nonterminal;
+
+    public Context(){
+        TerminalExpression region = new TerminalExpression(regions);
+        TerminalExpression person = new TerminalExpression(persions);
+        nonterminal = new NonterminalExpression(region,person);
+    }
+
+    public void check(String info){
+        boolean result = nonterminal.Interpret(info);
+        if (result){
+            System.out.println("识别成功~");
+        }else {
+            System.out.println("识别失败~");
+        }
+    }
+
+}
+
+interface Expression{
+    boolean Interpret(String info);
+}
+
+class NonterminalExpression implements Expression{
+
+    private TerminalExpression region;
+    private TerminalExpression person;
+
+    public NonterminalExpression(TerminalExpression region,TerminalExpression person){
+        this.region =region;
+        this.person = person;
+    }
+
+    @Override
+    public boolean Interpret(String info) {
+        String[] str = info.split("的");
+        // B区鹅调试人员 --> str = {"B区","调试人员"};
+        return region.Interpret(str[0]) && person.Interpret(str[1]);
+    }
+}
+
+class TerminalExpression implements Expression{
+
+    private Set<String> set = new HashSet<>();
+
+    public TerminalExpression(String[] data){
+        for (String str : data) {
+            set.add(str);
+        }
+    }
+
+    @Override
+    public boolean Interpret(String info) {
+        return set.contains(info);
+    }
+}
+```
+
+3）适用性
+
+Interpreter模式适用于当有一个语言需要解释执行，并且可将该语言中的句子表示为一个抽象语法树时，以下情况效果最好：
+
+- 该文法简单。对于复杂的发文，文法的类层次变得庞大而无法管理。
+- 效率不是一个关键问题。最高效的解释器通常不是通过直接解释语法分析树实现的，而是首先将它们转换成另一种形式。
+
+
+
+### 4. Iterator（迭代器）
+
+1）意图
+
+提供一种方法顺序访问一个聚合对象中的各个元素，且不需要暴露该对象的内部表示。
+
+2）结构
+
+![image-20230416103420119](../00box/photo/image-20230416103420119.png)
+
+其中：
+
+- Iterator (迭代器)定义访问和遍历元素的接口。
+- ConcreteIterator（具体迭代器)实现迭代器接口；对该聚合遍历时跟踪当前位置。
+- Aggregate( 聚合)定义创建相应迭代器对象的接口。
+- ConcreteAggregate (具体聚合)实现创建相应迭代器的接口，该操作返回 ConcreteIterator的一个适当的实例。
+
+```java
+/**
+ * 迭代器模式
+ */
+public class IteratorPattern {
+
+    public static void main(String[] args) {
+        BookAggregate bookAggregate = new BookAggregate();
+
+        String[] books = {"数据结构","操作系统","计算机网络","计算机组成原理"};
+        double[] prices = {10.24,20.48,40.96,81.92};
+
+        for (int i = 0; i < 4; i++) {
+            bookAggregate.Add(new Book(books[i],prices[i]));
+        }
+
+        Iterator iterator = bookAggregate.CreateIterator();
+        while (iterator.hasNext()) {
+            Book book = (Book) iterator.next();
+            System.out.println("书名：" + book.getName() + " 价格：" + book.getPrice());
+        }
+
+    }
+
+}
+
+interface Iterator{
+    boolean hasNext();
+    Object next();
+}
+
+class BookIterator implements Iterator{
+    private int index;
+    private BookAggregate bookAggregate;
+
+    public BookIterator(BookAggregate bookAggregate){
+        this.index = 0;
+        this.bookAggregate = bookAggregate;
+    }
+
+    @Override
+    public boolean hasNext() {
+        if (index < bookAggregate.getSize()){
+            return true;
+        }
+        return false;
+    }
+
+    @Override
+    public Object next() {
+        Object obj = bookAggregate.get(index);
+        index ++ ;
+        return obj;
+    }
+}
+
+class BookAggregate implements Aggregate{
+
+    private List<Book> list = new ArrayList<>();
+
+    public void Add(Book book){
+        list.add(book);
+    }
+
+    public Book get(int index){
+        return list.get(index);
+    }
+
+    public int getSize(){
+        return list.size();
+    }
+
+    @Override
+    public Iterator CreateIterator() {
+        return new BookIterator(this);
+    }
+}
+
+interface Aggregate{
+    Iterator CreateIterator();
+}
+
+class Book{
+    private String name;
+    private double price;
+
+    public Book(String name,double price){
+        this.name = name;
+        this.price = price;
+    }
+
+    public String getName(){
+        return name;
+    }
+
+    public double getPrice(){
+        return price;
+    }
+}
+```
+
+
+
+3）适用性
+
+Iterator 模式适用于：
+
+- 访问一个聚合对象的内容而无须暴露它的内部表示。
+- 支持对聚合对象的多种遍历。
+- 为遍历不同的聚合结构提供一个统一的接口。
+
+
+
+
+
+### 5. Mediator（中介者）
+
+1）意图
+
+用一个中介对象来封装一系列的对象交互。中介者使各对象不需要显式的相互引用，从而使其耦合松散，而且可以独立地改变它们之间的交互。
+
+2）结构
+
+![image-20230416112456694](../00box/photo/image-20230416112456694.png)
+
+其中：
+
+- Mediator (中介者)定义一个接口用于各同事(Colleague)对象通信。
+- ConcreteMediator (具体中介者)通过协调各同事对象实现协作行为；了解并维护它的各个同事。
+- Colleague class (同事类)知道它的中介者对象；每一个同事类对象在需要与其他同事通信的时候与它的中介者通信。
+
+
+
+```java
+/**
+ * 中介者模式
+ */
+public class MediatorPattern {
+    public static void main(String[] args) {
+        ConcreteMediator mediator = new ConcreteMediator();
+
+        Colleague1 colleague1 =new Colleague1(mediator);
+        Colleague2 colleague2 = new Colleague2(mediator);
+
+        mediator.setColleague1(colleague1);
+        mediator.setColleague2(colleague2);
+
+        colleague1.sendMessage("软考加油~");
+        colleague2.sendMessage("祝你上岸~");
+
+    }
+}
+
+abstract class Colleague{
+    protected Mediator mediator;
+}
+
+class Colleague1 extends Colleague{
+    public Colleague1(Mediator mediator){
+        this.mediator = mediator;
+    }
+
+    public void sendMessage(String message){
+        mediator.sendMessage(message,this);
+    }
+
+    public void Notify(String message){
+        System.out.println("同事1收到消息：" + message);
+    }
+}
+
+class Colleague2 extends Colleague{
+    public Colleague2(Mediator mediator){
+        this.mediator = mediator;
+    }
+
+    public void sendMessage(String message){
+        mediator.sendMessage(message,this);
+    }
+
+    public void Notify(String message){
+        System.out.println("同事2收到消息：" + message);
+    }
+}
+
+abstract class Mediator{
+    public abstract void sendMessage(String message,Colleague colleague);
+}
+
+class ConcreteMediator extends Mediator{
+    private Colleague1 colleague1;
+    private Colleague2 colleague2;
+
+    public void setColleague1(Colleague1 colleague1){
+        this.colleague1 = colleague1;
+    }
+
+    public void setColleague2(Colleague2 colleague2){
+        this.colleague2 = colleague2;
+    }
+
+    @Override
+    public void sendMessage(String message, Colleague colleague) {
+        if (colleague == colleague1){
+            // 让同事2收到消息
+            colleague2.Notify(message);
+        }else {
+            // 让同事1收到消息
+            colleague1.Notify(message);
+        }
+    }
+}
+```
+
+3）适用性
+
+Mediator 模式适用于：
+
+- 一组对象以定义良好但是复杂的方式进行通信，产生的相互依赖关系结构混乱且难以理解。
+
+- 一个对象引用其他很多对象并且直接与这些对象通信，导致难以复用该对象。
+
+- 想定制一个分布在多个类中的行为，而又不想生成太多的子类。
+
+  
+
+### 6. Memento（备忘录）
+
+1）意图
+
+在不破坏封装性的前提下捕获一个对象的内部状态，并在对象之外保存这个状态。这样以后就可以将对象恢复到原先保存的状态。
+
+2）结构
+
+![image-20230416150625243](../00box/photo/image-20230416150625243.png)
+
+```java
+/**
+ * 备忘录模式
+ */
+public class MementoPattern {
+    public static void main(String[] args) {
+        Caretaker caretaker = new Caretaker();
+        Originator originator = new Originator();
+
+        originator.setState("1024");
+        Memento backup1 = originator.createMemento();
+        caretaker.addMemento(backup1);
+
+        originator.setState("2048");
+        Memento backup2 = originator.createMemento();
+        caretaker.addMemento(backup2);
+
+        originator.setState("4096");
+        Memento backup3 = originator.createMemento();
+        caretaker.addMemento(backup3);
+
+        System.out.println(originator.getState());
+        caretaker.showMemento();
+
+        Memento memento1 = caretaker.getMemento(2);
+        originator.setState(memento1.getState());
+
+        System.out.println("根据第2次备份还原之后的状态为：" + originator.getState());
+    }
+}
+
+class Originator{ // 原发器
+    private String state;
+
+    public void setState(String state){
+        this.state = state;
+    }
+
+    public String getState(){
+        return state;
+    }
+
+    public Memento createMemento(){
+        return new Memento(state);
+    }
+
+    public void setMemento(Memento memento){
+        state = memento.getState();
+    }
+}
+
+class Memento{ // 备忘录
+    private String state;
+
+    public String getState(){
+        return state;
+    }
+
+    public Memento(String state){
+        this.state = state;
+    }
+}
+
+class Caretaker{ // 管理者
+    private List<Memento> mementoList = new ArrayList<>();
+
+    public void addMemento(Memento memento){
+        mementoList.add(memento);
+    }
+
+    public Memento getMemento(int index){
+        // 判断参数是否合法
+        if (index >=1 && index <= mementoList.size()) {
+            return mementoList.get(index - 1);
+        }
+        return null;
+    }
+
+    public void showMemento(){
+        int cnt = 1;
+        for (Memento memento : mementoList) {
+            System.out.println("第" + cnt + "次备份，状态为：" + memento.getState());
+            cnt ++;
+        }
+    }
+}
+```
+
+3）适用性
+
+Mement 模式适用于：
+
+- 必须保存一个对象在某一个时刻的（部分）状态，这样以后需要时它才能恢复到先前的状态。
+- 如果一个用接口来让其他对象直接得到这些状态，将会暴露对象的实现细节并破坏对象的封装性。
